--- a/index.html
+++ b/index.html
@@ -48,6 +48,36 @@
           <div class="swiper lightgallery-swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
+                <a href="src/4692/1.jpg"><img src="src/4692/1.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4692/2.jpg"><img src="src/4692/2.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4692/3.jpg"><img src="src/4692/3.jpg" alt="item1" /></a>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h2>Насадка одинарна</h2>
+          <div class="option-wrapper">
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
+    <h4><span class="item_option">Загальна довжина: </span>17 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.3 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>9 см</h4>
+            <h4><span class="item_option">Артикул:</span>4692</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="4692"
+              >Замовити</a
+            >
+          </div>
+        </div>
+        <div class="item">
+          <div class="swiper lightgallery-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
                 <a href="src/3755/1.jpg"><img src="src/3755/1.jpg" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
@@ -71,6 +101,39 @@
           <div class="price-wrapper">
             <h3>3199 <span>грн</span></h3>
             <a href="#" class="button-37 buyButton" data-product="3755"
+              >Замовити</a
+            >
+          </div>
+        </div>
+        <div class="item">
+          <div class="swiper lightgallery-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="src/3746/1.jpg"><img src="src/3746/1.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/3746/2.jpg"><img src="src/3746/2.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/3746/3.jpg"><img src="src/3746/3.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/3746/4.jpg"><img src="src/3746/4.jpg" alt="item1" /></a>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h2>Насадка одинарна</h2>
+          <div class="option-wrapper">
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
+    <h4><span class="item_option">Загальна довжина: </span>14.5–17.5 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>5.3 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>9 см</h4>
+            <h4><span class="item_option">Артикул:</span>3746</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="3746"
               >Замовити</a
             >
           </div>
@@ -106,6 +169,66 @@
             >
           </div>
         </div>
+        <div class="item">
+          <div class="swiper lightgallery-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="src/4112/1.jpg"><img src="src/4112/1.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4112/2.jpg"><img src="src/4112/2.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4112/3.jpg"><img src="src/4112/3.jpg" alt="item1" /></a>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h2>Насадка одинарна</h2>
+          <div class="option-wrapper">
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
+    <h4><span class="item_option">Загальна довжина: </span>16–18 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>4.8–6 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>8 см</h4>
+            <h4><span class="item_option">Артикул:</span>4112</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="4112"
+              >Замовити</a
+            >
+          </div>
+        </div>
+        <div class="item">
+          <div class="swiper lightgallery-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="src/3748/1.jpg"><img src="src/3748/1.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/3748/2.jpg"><img src="src/3748/2.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/3748/3.jpg"><img src="src/3748/3.jpg" alt="item1" /></a>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h2>Насадка одинарна</h2>
+          <div class="option-wrapper">
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
+    <h4><span class="item_option">Загальна довжина: </span>14–16.5 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>5.3 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>10 см</h4>
+            <h4><span class="item_option">Артикул:</span>3748</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="3748"
+              >Замовити</a
+            >
+          </div>
+        </div>
                 <div class="item">
           <div class="swiper lightgallery-swiper">
             <div class="swiper-wrapper">
@@ -133,6 +256,66 @@
           <div class="price-wrapper">
             <h3>3199 <span>грн</span></h3>
             <a href="#" class="button-37 buyButton" data-product="3757"
+              >Замовити</a
+            >
+          </div>
+        </div>
+        <div class="item">
+          <div class="swiper lightgallery-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="src/4111/1.png"><img src="src/4111/1.png" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4111/2.png"><img src="src/4111/2.png" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4111/3.png"><img src="src/4111/3.png" alt="item1" /></a>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h2>Насадка одинарна</h2>
+          <div class="option-wrapper">
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
+    <h4><span class="item_option">Загальна довжина: </span>17 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.3 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>9 см</h4>
+            <h4><span class="item_option">Артикул:</span>4111</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="4111"
+              >Замовити</a
+            >
+          </div>
+        </div>
+        <div class="item">
+          <div class="swiper lightgallery-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="src/3749/1.jpg"><img src="src/3749/1.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/3749/2.jpg"><img src="src/3749/2.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/3749/3.jpg"><img src="src/3749/3.jpg" alt="item1" /></a>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h2>Насадка одинарна</h2>
+          <div class="option-wrapper">
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
+    <h4><span class="item_option">Загальна довжина: </span>14.5–17.5 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>9 см</h4>
+            <h4><span class="item_option">Артикул:</span>3749</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="3749"
               >Замовити</a
             >
           </div>
@@ -168,6 +351,36 @@
             >
           </div>
         </div>
+        <div class="item">
+          <div class="swiper lightgallery-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="src/3753/1.jpg"><img src="src/3753/1.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/3753/2.jpg"><img src="src/3753/2.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/3753/3.jpg"><img src="src/3753/3.jpg" alt="item1" /></a>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h2>Насадка одинарна</h2>
+          <div class="option-wrapper">
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
+    <h4><span class="item_option">Загальна довжина: </span>15–17.5 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.5 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>9 см</h4>
+            <h4><span class="item_option">Артикул:</span>3753</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="3753"
+              >Замовити</a
+            >
+          </div>
+        </div>
                 <div class="item">
           <div class="swiper lightgallery-swiper">
             <div class="swiper-wrapper">
@@ -195,6 +408,36 @@
           <div class="price-wrapper">
             <h3>3199 <span>грн</span></h3>
             <a href="#" class="button-37 buyButton" data-product="4104"
+              >Замовити</a
+            >
+          </div>
+        </div>
+        <div class="item">
+          <div class="swiper lightgallery-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="src/3781/1.jpg"><img src="src/3781/1.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/3781/2.jpg"><img src="src/3781/2.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/3781/3.jpg"><img src="src/3781/3.jpg" alt="item1" /></a>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h2>Насадка одинарна</h2>
+          <div class="option-wrapper">
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
+    <h4><span class="item_option">Загальна довжина: </span>14.5–17.5 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>10 см</h4>
+            <h4><span class="item_option">Артикул:</span>3781</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="3781"
               >Замовити</a
             >
           </div>
@@ -230,6 +473,39 @@
             >
           </div>
         </div>
+        <div class="item">
+          <div class="swiper lightgallery-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="src/4100/1.jpg"><img src="src/4100/1.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4100/2.jpg"><img src="src/4100/2.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4100/3.jpg"><img src="src/4100/3.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4100/4.jpg"><img src="src/4100/4.jpg" alt="item1" /></a>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h2>Насадка одинарна</h2>
+          <div class="option-wrapper">
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
+    <h4><span class="item_option">Загальна довжина: </span>17.5 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>7.6 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>11.5 см</h4>
+            <h4><span class="item_option">Артикул:</span>4100</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="4100"
+              >Замовити</a
+            >
+          </div>
+        </div>
                 <div class="item">
           <div class="swiper lightgallery-swiper">
             <div class="swiper-wrapper">
@@ -257,6 +533,69 @@
           <div class="price-wrapper">
             <h3>3199 <span>грн</span></h3>
             <a href="#" class="button-37 buyButton" data-product="4194"
+              >Замовити</a
+            >
+          </div>
+        </div>
+        <div class="item">
+          <div class="swiper lightgallery-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="src/4102/1.jpg"><img src="src/4102/1.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4102/2.jpg"><img src="src/4102/2.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4102/3.jpg"><img src="src/4102/3.jpg" alt="item1" /></a>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h2>Насадка одинарна</h2>
+          <div class="option-wrapper">
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
+    <h4><span class="item_option">Загальна довжина: </span>16.5 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.5 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>9 см</h4>
+            <h4><span class="item_option">Артикул:</span>4102</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="4102"
+              >Замовити</a
+            >
+          </div>
+        </div>
+        <div class="item">
+          <div class="swiper lightgallery-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="src/4110/1.jpg"><img src="src/4110/1.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4110/2.jpg"><img src="src/4110/2.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4110/3.jpg"><img src="src/4110/3.jpg" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/4110/4.jpg"><img src="src/4110/4.jpg" alt="item1" /></a>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h2>Насадка одинарна</h2>
+          <div class="option-wrapper">
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
+    <h4><span class="item_option">Загальна довжина: </span>15.5 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.3 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>9 см</h4>
+            <h4><span class="item_option">Артикул:</span>4110</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>3199 <span>грн</span></h3>
+            <a href="#" class="button-37 buyButton" data-product="4110"
               >Замовити</a
             >
           </div>
