--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header id="header">
       <div class="container">
         <a href="index.html" class="header-logo"
-          ><img src="logo.png" alt="logo"
+          ><img src="logo.svg" alt="logo"
         /></a>
         <div id="mobile-container" class="mobile-container">
           <nav class="menu">
@@ -38,6 +38,7 @@
       </div>
     </header>
     <div class="container-main">
+      <h2 class="title-category">Каталог товарів</h2>
       <div class="filter-buttons">
   <button class="filter-btn active" data-filter="all">Всі</button>
   <button class="filter-btn" data-filter="подвійна">Подвійні</button>
@@ -118,7 +119,7 @@
                 <a href="src/3746/3.png"><img src="src/3746/3.png" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <a href="src/3746/4.jpg"><img src="src/3746/4.jpg" alt="item1" /></a>
+                <a href="src/3746/4.png"><img src="src/3746/4.png" alt="item1" /></a>
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -486,7 +487,7 @@
                 <a href="src/4100/3.png"><img src="src/4100/3.png" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <a href="src/4100/4.jpg"><img src="src/4100/4.jpg" alt="item1" /></a>
+                <a href="src/4100/4.png"><img src="src/4100/4.png" alt="item1" /></a>
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -580,7 +581,7 @@
                 <a href="src/4110/3.png"><img src="src/4110/3.png" alt="item1" /></a>
               </div>
               <div class="swiper-slide">
-                <a href="src/4110/4.jpg"><img src="src/4110/4.jpg" alt="item1" /></a>
+                <a href="src/4110/4.png"><img src="src/4110/4.png" alt="item1" /></a>
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -602,6 +603,40 @@
         </div>
       </div>
     </div>
+    <section class="about">
+      <div class="container-main">
+        <div class="about-us">
+          <div class="text-wrapper">
+          <h4 class="about">Про нас</h4>
+          <h2 class="about">Ми створили зручний каталог вихлопних насадок для тих, хто хоче додати стилю та звуку своєму авто</h2>
+          <p class="about">Усі моделі в наявності або під замовлення з доставкою по Україні. Обирай, що підходить саме тобі — без зайвого спаму, без нав’язування</p>
+          </div>
+          <img src="src/car.png" alt="car">
+        </div>
+        <div class="steps-title">
+          <h4 class="about">Три прості кроки</h4>
+          <h2 class="about">Як замовити?</h2>
+        </div>
+        <div class="steps">
+          <div class="step">
+            <h2>01</h2>
+            <h3>Обери насадку в каталозі</h3>
+            <p>Переглянь фото, розмір, форму — усе, що потрібно є в описі</p>
+          </div>
+          <div class="step">
+            <h2>02</h2>
+            <h3>Напиши нам у Telegram</h3>
+            <p>Скинь назву моделі або скрін. Ми підтвердимо наявність і уточнимо деталі</p>
+          </div>
+          <div class="step">
+            <h2>03</h2>
+            <h3>Отримай замовлення</h3>
+            <p>Відправимо Новою Поштою або зручною для тебе доставкою</p>
+          </div>
+        </div>
+        
+      </div>
+    </section>
     <footer id="footer">
       <h2>Прийом замовлень: Пн-Нд 9:00-20:00</h2>
       <div id="orderModal" class="modal">
