--- a/index.html
+++ b/index.html
@@ -29,16 +29,45 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a class="menu__link" href="#footer">Contacts</a>
+                <a class="menu__link" href="#shop">Каталог</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#footer">Контакти</a>
               </li>
             </ul>
           </nav>
         </div>
-        <a href="https://t.me/akrapovic_kiev_ua" target="_blank" class="tg-logo"><img src="tg.png" alt="tg" /></a>
+        <a href="https://t.me/akrapovic_kiev_ua" target="_blank"class="buttonTG">Консультація
+          <svg>
+            <use href="#tg-logo" ></use>
+          </svg>
+        </a>
       </div>
     </header>
+    <section class="hero">
+      <h1>Додай звуку і стилю своєму авто</h1>
+      <p>Великий вибір вихлопних насадок з доставкою по Україні.</p>
+      <p>Порадимо — підберемо — надішлемо</p>
+      <a href="https://t.me/akrapovic_kiev_ua" target="_blank"class="buttonTG-hero">В каталог
+        <svg>
+            <use href="#arrow" ></use>
+          </svg>
+      </a>
+    </section>
+        <section class="about">
+      <div class="container-main">
+        <div class="about-us">
+          <div class="text-wrapper">
+          <h4 class="about">Про нас</h4>
+          <h2 class="about">Ми створили зручний каталог вихлопних насадок для тих, хто хоче додати стилю та звуку своєму авто</h2>
+          <p class="about">Усі моделі в наявності або під замовлення з доставкою по Україні. Обирай, що підходить саме тобі — без зайвого спаму, без нав’язування</p>
+          </div>
+          <img src="src/car.png" alt="car">
+        </div>
+      </div>
+    </section>
     <div class="container-main">
-      <h2 class="title-category">Каталог товарів</h2>
+      <h2 class="title-category" id="shop">Каталог товарів</h2>
       <div class="filter-buttons">
   <button class="filter-btn active" data-filter="all">Всі</button>
   <button class="filter-btn" data-filter="подвійна">Подвійні</button>
@@ -605,14 +634,6 @@
     </div>
     <section class="about">
       <div class="container-main">
-        <div class="about-us">
-          <div class="text-wrapper">
-          <h4 class="about">Про нас</h4>
-          <h2 class="about">Ми створили зручний каталог вихлопних насадок для тих, хто хоче додати стилю та звуку своєму авто</h2>
-          <p class="about">Усі моделі в наявності або під замовлення з доставкою по Україні. Обирай, що підходить саме тобі — без зайвого спаму, без нав’язування</p>
-          </div>
-          <img src="src/car.png" alt="car">
-        </div>
         <div class="steps-title">
           <h4 class="about">Три прості кроки</h4>
           <h2 class="about">Як замовити?</h2>
@@ -676,6 +697,21 @@
           </form>
         </div>
       </div>
+     <svg>
+      <symbol id="tg-logo" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <path d="M4.10355 10.8793C4.10355 10.8793 12.0645 7.91578 14.8255 6.87226C15.8839 6.45488 19.4733 5.11917 19.4733 5.11917C19.4733 5.11917 21.1299 4.53485 20.9918 5.95398C20.9458 6.53836 20.5777 8.58358 20.2095 10.7958C19.6573 13.9263 19.0591 17.349 19.0591 17.349C19.0591 17.349 18.9671 18.309 18.1848 18.476C17.4025 18.6429 16.114 17.8916 15.8839 17.7246C15.6998 17.5994 12.4326 15.7211 11.2362 14.8028C10.9141 14.5524 10.5459 14.0516 11.2822 13.4672C12.9388 12.0898 14.9175 10.3784 16.114 9.2932C16.6662 8.7923 17.2184 7.62359 14.9175 9.04272C11.6504 11.088 8.42916 13.008 8.42916 13.008C8.42916 13.008 7.69286 13.4254 6.31237 13.0497C4.93181 12.6741 3.32121 12.1732 3.32121 12.1732C3.32121 12.1732 2.21686 11.5471 4.10355 10.8793Z" fill="white" />
+      </symbol>
+      <symbol id="arrow" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+<rect x="0.5" width="48" height="48" rx="24" fill="url(#paint0_linear_11_1279)"/>
+<path d="M17.7929 29.818C17.4024 30.2086 17.4024 30.8417 17.7929 31.2323C18.1834 31.6228 18.8166 31.6228 19.2071 31.2323L17.7929 29.818ZM32.0251 18C32.0251 17.4477 31.5774 17 31.0251 17H22.0251C21.4729 17 21.0251 17.4477 21.0251 18C21.0251 18.5523 21.4729 19 22.0251 19H30.0251V27C30.0251 27.5523 30.4729 28 31.0251 28C31.5774 28 32.0251 27.5523 32.0251 27V18ZM18.5 30.5251L19.2071 31.2323L31.7323 18.7071L31.0251 18L30.318 17.2929L17.7929 29.818L18.5 30.5251Z" fill="white"/>
+<defs>
+<linearGradient id="paint0_linear_11_1279" x1="0.5" y1="0" x2="0.499995" y2="48" gradientUnits="userSpaceOnUse">
+<stop stop-color="#F03816"/>
+<stop offset="1" stop-color="#F7710B"/>
+</linearGradient>
+</defs>
+      </symbol>
+     </svg>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lightgallery@2.7.1/lightgallery.min.js"></script>
