--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h1>Додай звуку і стилю своєму авто</h1>
       <p>Великий вибір вихлопних насадок з доставкою по Україні.</p>
       <p>Порадимо — підберемо — надішлемо</p>
-      <a href="https://t.me/akrapovic_kiev_ua" target="_blank"class="buttonTG-hero">В каталог
+      <a href="#shop" class="buttonTG-hero">В каталог
         <svg>
             <use href="#arrow" ></use>
           </svg>
