--- a/index.html
+++ b/index.html
@@ -659,7 +659,23 @@
       </div>
     </section>
     <footer id="footer">
-      <h2>Прийом замовлень: Пн-Нд 9:00-20:00</h2>
+      <div class="container-main">
+        <a href="#" class="footer-logo"
+          ><img src="./src/footel-logo.png" alt="logo"
+        /></a>
+        <div class="footer-menu-row">
+          <ul>
+            <li>Про нас</li>
+            <li>Каталог</li>
+            <li>Контакти</li>
+          </ul>
+        </div>
+        <div class="footer-contacts-row">
+          <p>Зробити замовлення в Telegram</p>
+          <a href="https://t.me/akrapovic_kiev_ua" target="_blank">@akrapovic_kiev_ua</a>
+          <p class="time">Працюємо щодня з 10:00 до 22:00</p>
+        </div>
+      </div>
       <div id="orderModal" class="modal">
         <div class="modal-content">
           <span class="close">&times;</span>
