--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
           </svg>
       </a>
     </section>
+    <img src="/src/Frame.png" alt="">
         <section class="about">
       <div class="container-main">
         <div class="about-us">
           <div class="text-wrapper">
-          <h4 class="about">Про нас</h4>
-          <h2 class="about">Ми створили зручний каталог вихлопних насадок для тих, хто хоче додати стилю та звуку своєму авто</h2>
-          <p class="about">Усі моделі в наявності або під замовлення з доставкою по Україні. Обирай, що підходить саме тобі — без зайвого спаму, без нав’язування</p>
+          <h4 class="about-us-text" id="about">Про нас</h4>
+          <h2 class="about-us-text">Ми створили зручний каталог вихлопних насадок для тих, хто хоче додати стилю та звуку своєму авто</h2>
+          <p class="about-us-text">Усі моделі в наявності або під замовлення з доставкою по Україні. Обирай, що підходить саме тобі — без зайвого спаму, без нав’язування</p>
           </div>
           <img src="src/car.png" alt="car">
         </div>
@@ -635,8 +636,8 @@
     <section class="about">
       <div class="container-main">
         <div class="steps-title">
-          <h4 class="about">Три прості кроки</h4>
-          <h2 class="about">Як замовити?</h2>
+          <h4 class="about-us-text">Три прості кроки</h4>
+          <h2 class="about-us-text">Як замовити?</h2>
         </div>
         <div class="steps">
           <div class="step">
@@ -665,9 +666,8 @@
         /></a>
         <div class="footer-menu-row">
           <ul>
-            <li>Про нас</li>
-            <li>Каталог</li>
-            <li>Контакти</li>
+            <li><a href="#about">Про нас</a></li>
+            <li><a href="#shop">Каталог</a></li>
           </ul>
         </div>
         <div class="footer-contacts-row">
