--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </a>
     </section>
     <div class="image-container">
-  <img src="/src/Frame.png" alt="">
+  <img src="src/Frame.png" alt="">
 </div>
         <section class="about">
       <div class="container-main">
