--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
           <div class="price-wrapper">
             <h3>1499 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="4692"
+            <a href="#shop" class="button-37 buyButton" data-product="4692"
               >Замовити</a
             >
           </div>
@@ -133,7 +133,7 @@
           </div>
           <div class="price-wrapper">
             <h3>3199 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="3755"
+            <a href="#shop" class="button-37 buyButton" data-product="3755"
               >Замовити</a
             >
           </div>
@@ -166,7 +166,7 @@
           </div>
           <div class="price-wrapper">
             <h3>1899 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="3746"
+            <a href="#shop" class="button-37 buyButton" data-product="3746"
               >Замовити</a
             >
           </div>
@@ -197,7 +197,7 @@
           </div>
           <div class="price-wrapper">
             <h3>3299 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="3756"
+            <a href="#shop" class="button-37 buyButton" data-product="3756"
               >Замовити</a
             >
           </div>
@@ -227,7 +227,7 @@
           </div>
           <div class="price-wrapper">
             <h3>1399 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="4112"
+            <a href="#shop" class="button-37 buyButton" data-product="4112"
               >Замовити</a
             >
           </div>
@@ -257,7 +257,7 @@
           </div>
           <div class="price-wrapper">
             <h3>2099 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="3748"
+            <a href="#shop" class="button-37 buyButton" data-product="3748"
               >Замовити</a
             >
           </div>
@@ -288,7 +288,7 @@
           </div>
           <div class="price-wrapper">
             <h3>3299 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="3757"
+            <a href="#shop" class="button-37 buyButton" data-product="3757"
               >Замовити</a
             >
           </div>
@@ -318,7 +318,7 @@
           </div>
           <div class="price-wrapper">
             <h3>1499 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="4111"
+            <a href="#shop" class="button-37 buyButton" data-product="4111"
               >Замовити</a
             >
           </div>
@@ -348,7 +348,7 @@
           </div>
           <div class="price-wrapper">
             <h3>1899 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="3749"
+            <a href="#shop" class="button-37 buyButton" data-product="3749"
               >Замовити</a
             >
           </div>
@@ -379,7 +379,7 @@
           </div>
           <div class="price-wrapper">
             <h3>3250 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="3758"
+            <a href="#shop" class="button-37 buyButton" data-product="3758"
               >Замовити</a
             >
           </div>
@@ -409,7 +409,7 @@
           </div>
           <div class="price-wrapper">
             <h3>2099 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="3753"
+            <a href="#shop" class="button-37 buyButton" data-product="3753"
               >Замовити</a
             >
           </div>
@@ -440,7 +440,7 @@
           </div>
           <div class="price-wrapper">
             <h3>3350 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="4104"
+            <a href="#shop" class="button-37 buyButton" data-product="4104"
               >Замовити</a
             >
           </div>
@@ -470,7 +470,7 @@
           </div>
           <div class="price-wrapper">
             <h3>2099 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="3781"
+            <a href="#shop" class="button-37 buyButton" data-product="3781"
               >Замовити</a
             >
           </div>
@@ -501,7 +501,7 @@
           </div>
           <div class="price-wrapper">
             <h3>3399 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="4106"
+            <a href="#shop" class="button-37 buyButton" data-product="4106"
               >Замовити</a
             >
           </div>
@@ -534,7 +534,7 @@
           </div>
           <div class="price-wrapper">
             <h3>2199 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="4100"
+            <a href="#shop" class="button-37 buyButton" data-product="4100"
               >Замовити</a
             >
           </div>
@@ -565,7 +565,7 @@
           </div>
           <div class="price-wrapper">
             <h3>3250 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="4194"
+            <a href="#shop" class="button-37 buyButton" data-product="4194"
               >Замовити</a
             >
           </div>
@@ -595,7 +595,7 @@
           </div>
           <div class="price-wrapper">
             <h3>2199 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="4102"
+            <a href="#shop" class="button-37 buyButton" data-product="4102"
               >Замовити</a
             >
           </div>
@@ -628,7 +628,7 @@
           </div>
           <div class="price-wrapper">
             <h3>1499 <span>грн</span></h3>
-            <a href="#" class="button-37 buyButton" data-product="4110"
+            <a href="#shop" class="button-37 buyButton" data-product="4110"
               >Замовити</a
             >
           </div>
@@ -637,7 +637,7 @@
     </div>
     <section class="about">
       <div class="container-main">
-        <div class="steps-title">
+        <div class="steps-title" id="steps">
           <h4 class="about-us-text">Три прості кроки</h4>
           <h2 class="about-us-text">Як замовити?</h2>
         </div>
@@ -791,6 +791,7 @@
             alert("Ваш заказ принят! Мы свяжемся с вами в ближайшее время.");
             document.getElementById("orderForm").reset();
             document.getElementById("orderModal").style.display = "none";
+            window.location.href = "#steps" ;
           })
           .catch((error) => {
             console.error("Error:", error);
